Unexpected error message in the logs attempting to refresh the version of a dropped database

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 6.1.1, 5.0.14, 6.0.3, 6.2.0-rc0
    • Affects Version/s: None
    • Component/s: None
    • None
    • Fully Compatible
    • ALL
    • v6.1, v6.0, v5.0
    • Sharding EMEA 2022-10-03
    • 20
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      As a consequence of SERVER-66972, when the procedure that refreshes the database version identifies that the database has been dropped (expected event), prints an error message in the log saying that the refresh attempt is failed.

      This event should be treated as expected. Note that this is just a wrong error message, and the application behavior is not affected.

            Assignee:
            Antonio Fuschetto
            Reporter:
            Antonio Fuschetto
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: