SERVER-69930 Unexpected error message in the logs attempting to refresh the version of a dropped database